--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="social">
-                            <a href="#"><img src="img/icons/facebook.png" alt="facebook"></a>
-                            <a href="#"><img src="img/icons/instagram.png" alt="inatagram"></a>
-                            <a href="#"><img src="img/icons/youtube.png" alt="youtube"></a>
-                            <a href="#"><img src="img/icons/linkedin.png" alt="linkedin"></a>
-                            <a href="#"><img src="img/icons/gmail.png" alt="gnail"></a>
+                            <a href="https://www.facebook.com/Mhuseingaza?mibextid=ZbWKwL"><img src="img/icons/facebook.png" alt="facebook"></a>
+                            <a href="https://instagram.com/abumuslim_gaza?igshid=MzRlODBiNWFlZA=="><img src="img/icons/instagram.png" alt="inatagram"></a>
+                            <a href="https://www.youtube.com/@MuhammadHuseinGaza"><img src="img/icons/youtube.png" alt="youtube"></a>
+                            <a href="mailto:muradabed683@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
                         </div>
                     </div>
                 </div>
@@ -315,11 +314,10 @@
                     <div class="col-one">
                         <h4>Social Media</h4>
                         <div class="social">
-                            <a href="#"><img src="img/icons/facebook.png" alt="facebook"></a>
-                            <a href="#"><img src="img/icons/instagram.png" alt="inatagram"></a>
-                            <a href="#"><img src="img/icons/youtube.png" alt="youtube"></a>
-                            <a href="#"><img src="img/icons/linkedin.png" alt="linkedin"></a>
-                            <a href="#"><img src="img/icons/gmail.png" alt="gnail"></a>
+                            <a href="https://www.facebook.com/Mhuseingaza?mibextid=ZbWKwL"><img src="img/icons/facebook.png" alt="facebook"></a>
+                            <a href="https://instagram.com/abumuslim_gaza?igshid=MzRlODBiNWFlZA=="><img src="img/icons/instagram.png" alt="inatagram"></a>
+                            <a href="https://www.youtube.com/@MuhammadHuseinGaza"><img src="img/icons/youtube.png" alt="youtube"></a>
+                            <a href="mailto:muradabed683@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
                         </div>
                         <p>Copyright &copy; 2023 | All Right Reserved</p>
                     </div>
