--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="container">
             <div class="heading">
                 <h2>Our Missions</h2>
-                <p>We have delivered <span>Donations</span> to needy Peoples</p>
+                <p>We have delivered <span>Donations</span> to needy Peoples  <a href="https://www.facebook.com/Mhuseingaza?mibextid=ZbWKwL">for more</a></p>
             </div>
             <div class="gallery-sec">
                 <div class="container">
@@ -295,7 +295,7 @@
                         <h4>Code Convent foundation</h4>
                         <p>Address : 3, Gaza, Palestan </p>
                         <!-- <p>Contact No : <a href="tel: +972 98659****59">+97290****4</a></p> -->
-                        <p>Email : <a href="mailto:foundation@code.com">foundation@code.com</a></p>
+                        <p>Email : <a href="mailto:muradabed683@gmail.com">muradabed683@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-4">
