--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <!-- <p>Contact No : <a href="tel: +9198659****59">+97290****4</a></p> -->
+                        <p>Bank Account for Donation : <a href="#">156192551</a></p>
                     </div>
                     <div class="col-lg-6">
                         <div class="social">
@@ -294,7 +294,7 @@
                     <div class="col-one">
                         <h4>Code Convent foundation</h4>
                         <p>Address : 3, Gaza, Palestan </p>
-                        <!-- <p>Contact No : <a href="tel: +972 98659****59">+97290****4</a></p> -->
+                        <p>Bank Account for Donation : <a href="#">156192551</a></p>
                         <p>Email : <a href="mailto:muradabed683@gmail.com">muradabed683@gmail.com</a></p>
                     </div>
                 </div>
