--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                                 <button class="btn1 donate-paypal" class="btn1">Donate with PayPal</button>
                                 <button class="btn1 donate-blockchain" class="btn1">Donate with Blockchain</button>
                             </div>
+                            <div class="buttons">
+                                <button class="btn1 donate-account" class="btn1">Bank Account for Donation 156192551                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 order-first order-lg-last">
