--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Convent Foundation
+    <title>Palestinian Victims' Welfare Foundation
     </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <header>
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-dark">
-                    <a class="navbar-brand" href="#home">Code Convent Foundation</a>
+                    <a class="navbar-brand" href="#home">Palestinian Victims' Welfare Foundation</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -60,9 +61,9 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="social">
-                            <a href="https://www.facebook.com/Mhuseingaza?mibextid=ZbWKwL"><img src="img/icons/facebook.png" alt="facebook"></a>
-                            <a href="https://instagram.com/abumuslim_gaza?igshid=MzRlODBiNWFlZA=="><img src="img/icons/instagram.png" alt="inatagram"></a>
-                            <a href="https://www.youtube.com/@MuhammadHuseinGaza"><img src="img/icons/youtube.png" alt="youtube"></a>
+                            <a href="https://www.facebook.com/ahmedhijazeee?mibextid=LQQJ4d"><img src="img/icons/facebook.png" alt="facebook"></a>
+                            <a href="https://instagram.com/ahmedhijazee?igshid=NTc4MTIwNjQ2YQ=="><img src="img/icons/instagram.png" alt="inatagram"></a>
+                            <a href="https://www.tiktok.com/@ahijazi96?_t=8ckiBmBi8Fm&_r=1"><img src="img/icons/tiktok.png" alt="tiktok"></a>
                             <a href="mailto:muradabed683@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
                         </div>
                     </div>
@@ -78,11 +79,18 @@
                     <div class="col-lg-6 align-item-center">
                         <div class="home-info">
                             <h1>Alone we can do little, together we can do so much</h1>
-                            <h2>We <span>Code Convent foundation</span> manage donation for needy peoples</h2>
+                            <h2>We <span>Palestinian Victims' Welfare Foundation</span> manage donation for needy peoples</h2>
                             <p>More donations increase our potential.</p>
                             <div class="buttons">
                                 <button class="btn1 donate-paypal" class="btn1">Donate with PayPal</button>
-                                <button class="btn1 donate-blockchain" class="btn1">Donate with Blockchain</button>
+                                <button class="btn1 donate-USDT">Donate with USDT</button>
+                                <!-- <div class="qr-modal">
+                                    <div class="modal-content">
+                                      <div class="qr-code"></div>
+                                      <div class="qr-code-id"></div>
+                                       <span class="close-btn">&times;</span> 
+                                    </div>
+                                  </div> -->
                             </div>
                             <div class="buttons">
                                 <button class="btn1 donate-account" class="btn1">Bank Account for Donation 156192551                                </button>
@@ -113,7 +121,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-blockchain">Donate with Blockchain</button>
+                            <button class="btn1 donate-USDT">Donate with USDT</button>
                         </div>
                     </div>
                 </div>
@@ -125,7 +133,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-blockchain">Donate with Blockchain</button>
+                            <button class="btn1 donate-USDT">Donate with USDT</button>
                         </div>
                     </div>
                 </div>
@@ -137,7 +145,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-blockchain">Donate with Blockchain</button>
+                            <button class="btn1 donate-USDT">Donate with USDT</button>
                         </div>
                     </div>
                 </div>
@@ -149,7 +157,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-blockchain">Donate with Blockchain</button>
+                            <button class="btn1 donate-USDT">Donate with USDT</button>
                         </div>
                     </div>
                 </div>
@@ -161,7 +169,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-blockchain">Donate with Blockchain</button>
+                            <button class="btn1 donate-USDT">Donate with USDT</button>
                         </div>
                     </div>
                 </div>
@@ -173,7 +181,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-blockchain">Donate with Blockchain</button>
+                            <button class="btn1 donate-USDT">Donate with USDT</button>
                         </div>
                 </div>
     </section>
@@ -187,12 +195,15 @@
             <div class="gallery-sec">
                 <div class="container">
                     <div class="image-container">
-                        <div class="image"><img src="img/miss/1.jpeg" alt="img"></div>
-                        <div class="image"><img src="img/miss/2.jpeg" alt="img"></div>
-                        <div class="image"><img src="img/miss/3.jpeg" alt="img"></div>
-                        <div class="video"><video src="img/miss/4.mp4" muted></video></div>
-                        <div class="video"><video src="img/miss/5.mp4" muted></video></div>
-                        <div class="video"><video src="img/miss/6.mp4" muted></video></div>
+                        <div class="image"><img src="img/miss/1.jpg" alt="img"></div>
+                        <div class="image"><img src="img/miss/2.jpg" alt="img"></div>
+                        <div class="image"><img src="img/miss/3.jpg" alt="img"></div>
+                        <div class="image"><img src="img/miss/4.jpg" alt="img"></div>
+                        <div class="image"><img src="img/miss/5.jpg" alt="img"></div>
+                        <div class="image"><img src="img/miss/6.jpg" alt="img"></div>
+                        <div class="video"><video src="img/miss/7.mp4" muted></video></div>
+                        <div class="video"><video src="img/miss/8.mp4" muted></video></div>
+                        <div class="video"><video src="img/miss/9.mp4" muted></video></div>
 
                         <!-- <div class="image"><img src="img/miss/6.jpeg" alt="img"></div> -->
                         <!-- <div class="video"><video src="img/miss/8.mp4" muted>d;l</video></div> -->
@@ -295,7 +306,7 @@
 
                 <div class="col-lg-4">
                     <div class="col-one">
-                        <h4>Code Convent foundation</h4>
+                        <h4>Palestinian Victims' Welfare Foundation</h4>
                         <p>Address : 3, Gaza, Palestan </p>
                         <p>Bank Account for Donation : <a href="#">156192551</a></p>
                         <p>Email : <a href="mailto:muradabed683@gmail.com">muradabed683@gmail.com</a></p>
@@ -317,9 +328,9 @@
                     <div class="col-one">
                         <h4>Social Media</h4>
                         <div class="social">
-                            <a href="https://www.facebook.com/Mhuseingaza?mibextid=ZbWKwL"><img src="img/icons/facebook.png" alt="facebook"></a>
-                            <a href="https://instagram.com/abumuslim_gaza?igshid=MzRlODBiNWFlZA=="><img src="img/icons/instagram.png" alt="inatagram"></a>
-                            <a href="https://www.youtube.com/@MuhammadHuseinGaza"><img src="img/icons/youtube.png" alt="youtube"></a>
+                            <a href="https://www.facebook.com/ahmedhijazeee?mibextid=LQQJ4d"><img src="img/icons/facebook.png" alt="facebook"></a>
+                            <a href="https://instagram.com/ahmedhijazee?igshid=NTc4MTIwNjQ2YQ=="><img src="img/icons/instagram.png" alt="inatagram"></a>
+                            <a href="https://www.tiktok.com/@ahijazi96?_t=8ckiBmBi8Fm&_r=1"><img src="img/icons/tiktok.png" alt="tiktok"></a>
                             <a href="mailto:muradabed683@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
                         </div>
                         <p>Copyright &copy; 2023 | All Right Reserved</p>
