--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="img\logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palestinian Victims' Welfare Foundation
@@ -23,6 +24,7 @@
         <header>
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-dark">
+                    <a href="#home"><img src="img\logo.png" alt="facebook" width="50" height="50"></a>
                     <a class="navbar-brand" href="#home">Palestinian Victims' Welfare Foundation</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -57,14 +59,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>Bank Account for Donation : <a href="#">156192551</a></p>
+                        <!-- <p>Bank Account for Donation : <a href="#">156192551</a></p> -->
                     </div>
                     <div class="col-lg-6">
                         <div class="social">
                             <a href="https://www.facebook.com/ahmedhijazeee?mibextid=LQQJ4d"><img src="img/icons/facebook.png" alt="facebook"></a>
                             <a href="https://instagram.com/ahmedhijazee?igshid=NTc4MTIwNjQ2YQ=="><img src="img/icons/instagram.png" alt="inatagram"></a>
                             <a href="https://www.tiktok.com/@ahijazi96?_t=8ckiBmBi8Fm&_r=1"><img src="img/icons/tiktok.png" alt="tiktok"></a>
-                            <a href="mailto:muradabed683@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
+                            <a href="mailto:yuink813@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
                         </div>
                     </div>
                 </div>
@@ -83,7 +85,7 @@
                             <p>More donations increase our potential.</p>
                             <div class="buttons">
                                 <button class="btn1 donate-paypal" class="btn1">Donate with PayPal</button>
-                                <button class="btn1 donate-USDT">Donate with USDT</button>
+                                <button class="btn1 donate-blockchain">Donate with blockchain</button>
                                 <!-- <div class="qr-modal">
                                     <div class="modal-content">
                                       <div class="qr-code"></div>
@@ -121,7 +123,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-USDT">Donate with USDT</button>
+                            <button class="btn1 donate-blockchain">Donate with blockchain</button>
                         </div>
                     </div>
                 </div>
@@ -133,7 +135,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-USDT">Donate with USDT</button>
+                            <button class="btn1 donate-blockchain">Donate with blockchain</button>
                         </div>
                     </div>
                 </div>
@@ -145,7 +147,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-USDT">Donate with USDT</button>
+                            <button class="btn1 donate-blockchain">Donate with blockchain</button>
                         </div>
                     </div>
                 </div>
@@ -157,7 +159,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-USDT">Donate with USDT</button>
+                            <button class="btn1 donate-blockchain">Donate with blockchain</button>
                         </div>
                     </div>
                 </div>
@@ -169,7 +171,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-USDT">Donate with USDT</button>
+                            <button class="btn1 donate-blockchain">Donate with blockchain</button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +183,7 @@
                         <div class="donate-options">
                             <button class="btn1 donate-paypal">Donate with PayPal</button>
                             <p class="donate-or">or</p>
-                            <button class="btn1 donate-USDT">Donate with USDT</button>
+                            <button class="btn1 donate-blockchain">Donate with blockchain</button>
                         </div>
                 </div>
     </section>
@@ -307,9 +309,8 @@
                 <div class="col-lg-4">
                     <div class="col-one">
                         <h4>Palestinian Victims' Welfare Foundation</h4>
-
-                        <p>Bank Account for Donation : <a href="#">156192551</a></p>
-                        <p>Email : <a href="mailto:muradabed683@gmail.com">muradabed683@gmail.com</a></p>
+                        <!-- <p>Bank Account for Donation : <a href="#">156192551</a></p> -->
+                        <p>Email : <a href="mailto:yuink813@gmail.com">yuink813@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -331,7 +332,7 @@
                             <a href="https://www.facebook.com/ahmedhijazeee?mibextid=LQQJ4d"><img src="img/icons/facebook.png" alt="facebook"></a>
                             <a href="https://instagram.com/ahmedhijazee?igshid=NTc4MTIwNjQ2YQ=="><img src="img/icons/instagram.png" alt="inatagram"></a>
                             <a href="https://www.tiktok.com/@ahijazi96?_t=8ckiBmBi8Fm&_r=1"><img src="img/icons/tiktok.png" alt="tiktok"></a>
-                            <a href="mailto:muradabed683@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
+                            <a href="mailto:yuink813@gmail.com"><img src="img/icons/gmail.png" alt="gmail"></a>
                         </div>
                         <p>Copyright &copy; 2023 | All Right Reserved</p>
                     </div>
