--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                     </div>
                                   </div> -->
                             </div>
-                            <div class="buttons">
+                         <!--   <div class="buttons">
                                 <button class="btn1 donate-account" class="btn1">Bank Account for Donation 156192551                                </button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-lg-6 order-first order-lg-last">
